fix: dark mode toggle z-index

--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -107,6 +107,7 @@
   position: absolute;
   top: 1rem;
   right: 1rem;
+  z-index: 3;
 
   @media screen and (min-width: 640px) {
     position: fixed;
